Add base stats in html and js

--- a/dex.html
+++ b/dex.html
@@ -17,6 +17,7 @@
     <button onclick="fetchPokemon()">Cambiar pokemon</button>
     <br>
     <p id="types" name="types">Tipos</p>
+    <p id="stats" name="stats">Stats</p>
 
 <footer>
     <script src="./assets/dex.js"></script>
